fixes text wrapping issue with playlist

--- a/_/skin/pink.holiday/jplayer.pink.holiday.css
+++ b/_/skin/pink.holiday/jplayer.pink.holiday.css
@@ -315,7 +315,7 @@ div.jp-title {
 
 div.jp-title,
 div.jp-playlist {
-	width:300px;
+	width:328px;
 	background: white;
 	/*border-top:1px solid #E5EAEA;*/
 	position: absolute;
